--- a/webroot/css/layout/default.css
+++ b/webroot/css/layout/default.css
@@ -29,6 +29,9 @@
 /**
  * Main Content
  */
+body {
+  height: 100%;
+}
 body.fixed-nav-top {
   margin-top: 50px;
 }
